# book-algorithim-sample

./: README.md
backend/: app.py  book_score.db  data.json  json_data.py  pyproject.toml  pyrightconfig.json
frontend/: package.json
frontend/src/lib/layout/: Footer.tsx  Header.tsx  index.tsx
frontend/src/lib/pages/404/: index.tsx
frontend/src/lib/pages/home/: index.tsx
