[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Arnav <arnav.jindal7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
gunicorn = "^20.1.0"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
